insertReport abuse prevention